Bug 398275 - Incorrect tab index on Login into the KDE Bug Tracking System page
Summary: Incorrect tab index on Login into the KDE Bug Tracking System page
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.13.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-09-05 04:50 UTC by Alexander Mentyu
Modified: 2019-06-24 10:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-09-05 04:50:29 UTC
After entering username/email and pressing Tab key - focus jumps into save login info checkbox not to password field. It's more convenient to focus password field for quick input
Comment 1 skierpage 2019-03-11 23:24:05 UTC
Still true in version 5.14.5 on Fedora. The Password field seems to be the first tab index even though it's below the Username field.
Comment 2 Patrick Silva 2019-03-11 23:34:08 UTC
also confirmed on Arch Linux, plasma 5.15.2.
Comment 3 Harald Sitter 2019-06-24 10:11:11 UTC
Git commit 1772904c2980ec49a4d3839db9c38a370b88d60a by Harald Sitter.
Committed on 24/06/2019 at 10:11.
Pushed by sitter into branch 'master'.

set the focusPolicy of kpasswordlineedit to the policy of its proxy

Summary:
this is entirely the same kind of change as done in
c695aa5a21a731ab72c8405141b43feccad2b56a

a proxy does not automatically adopt the same focus policy as the widget
it proxies. instead it has its own policy which is simply the qwidget
default.
this prevents keyboard focus from working in (e.g.) buddy scenarios as well
as when hitting Tab to move through the intractable widgets with a
keyboard.
seeing as kpasswordlineedit is essentially a lineedit and being able to
"tab" from a username edit to a password edit seems a crucial behavioral
expectation.
CHANGELOG: KPasswordLineEdit now correctly inherits its QLineEdit's focusPolicy

Test Plan: designer reports StrongFocus as default now. when using the KPLE without changing its policy it will correctly receive focus through keyboard tabbing

Reviewers: cfeck

Reviewed By: cfeck

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D21894

M  +1    -0    src/kpasswordlineedit.cpp

https://commits.kde.org/kwidgetsaddons/1772904c2980ec49a4d3839db9c38a370b88d60a