set the focusPolicy of kpasswordlineedit to the policy of its proxy

Summary:
this is entirely the same kind of change as done in
c695aa5a21a731ab72c8405141b43feccad2b56a

a proxy does not automatically adopt the same focus policy as the widget
it proxies. instead it has its own policy which is simply the qwidget
default.
this prevents keyboard focus from working in (e.g.) buddy scenarios as well
as when hitting Tab to move through the intractable widgets with a
keyboard.
seeing as kpasswordlineedit is essentially a lineedit and being able to
"tab" from a username edit to a password edit seems a crucial behavioral
expectation.

BUG: 398275
CHANGELOG: KPasswordLineEdit now correctly inherits its QLineEdit's focusPolicy

Test Plan: designer reports StrongFocus as default now. when using the KPLE without changing its policy it will correctly receive focus through keyboard tabbing

Reviewers: cfeck

Reviewed By: cfeck

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D21894